--- a/nature.css
+++ b/nature.css
@@ -1,3 +1,21 @@
+@keyframes line{
+    0%{
+        translate: 0 0;
+    }
+    25%{
+        background-color: green;
+    }
+    50%{
+        translate:-200px 0 ;
+        background-color: red;
+    }
+    75%{
+        background-color: darkorchid;
+    }
+    100%{
+        translate: 0 0;
+    }
+}
 *{
     margin: 0;
     padding: 0;
@@ -7,4 +25,75 @@
 body{
     background-image: url(IMG-20230322-WA0014.jpg);
     background-size: cover;
+}
+.navbar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 100px;
+    width: 100vw;
+}
+.signup{
+    padding: 13px;
+    font-size: 20px;
+    border-radius: 11px;
+    border: none;
+    background-color: rgb(42, 42, 42);
+    color: bisque;
+    margin-left:12px;
+    transition: all 0.5s;
+}
+.login{
+    padding: 13px;
+    font-size: 20px;
+    border-radius: 11px;
+    border: none;
+    background-color: rgb(42, 42, 42);
+    color: bisque;
+    margin-left:12px;
+    transition: all 0.5s;
+}
+h1{
+    font-size:50px;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    margin-right: 30px;
+    translate: -90px; 
+}
+.line{
+    background: rgb(3, 41, 255);
+    padding-top:2px ;
+    animation: line 6s infinite linear;
+    
+}
+.login:hover{
+    transform: scale(1.05);
+}
+.signup:hover{
+    transform: scale(1.05);
+}
+main{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-top: 220px;
+}
+.buttons{
+    padding: 25px;
+    border: none;
+    border-radius: 20px;
+    font-size: 32px;
+    padding-inline: 100px;
+    background-color: rgb(47, 117, 47);
+    color: white;
+    transition: all 0.5s;
+}
+.e:hover{
+    transform: scale(1.05);
+}
+.d:hover{
+    transform: scale(1.05);
+}
+.j:hover{
+    transform: scale(1.05);
 }
